--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "mongodb": "^6.5.0",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
+    "openai": "^4.29.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
