--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^4.24.7",
     "openai": "^4.29.2",
     "react": "^18",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18",
     "uuid": "^9.0.1"
   },
